--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <!-- Tasks will be listed here -->
         </ul>
     </div>
+    <script src="script.js"></script>
 
 </body>
 </html>
